--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     </head>
     <body>
-        <div id="app-container"></div>
+        <div id="node-container"></div>
     </body>
 </html>
